apps/site/web/static/css/_stops.scss
.station-mode-description {
  display: inline-block;
  font-size: 1rem;
  font-weight: normal;
  padding-top: .5rem;
  vertical-align: top;

  @include media-breakpoint-down(sm) {
    display: none;
  }
}

.station-mode-icon {
  white-space: nowrap;
}

.mode-section {
  margin: $base-spacing 0;
}

.stations-access-icon {
  margin-bottom: .375rem;
}

.station-callout-box {
  @extend %callout;
}

.fare-agent-distance {
  color: $gray-light;
  text-align: right;
  float: right;
}

.station-schedule-icon {
  color: $gray-light;
}

.station-route-row {
  @extend %button-focus-color;
  border-bottom: 1px solid $gray-lightest;
  border-left: 1px solid $gray-lightest;
  border-right: 1px solid $gray-lightest;
  display: block;
  padding-bottom: .5em;
  padding-top: .5em;

  .column-name {
    font-weight: bold;
  }

  &.station-schedule-header {
    background-color: $gray-lightest;
    font-weight: bold;
    white-space: nowrap;
  }
}

.station-trip-headsign,
.station-trip-name,
.station-trip-status {
  color: $gray-dark;
}

.schedule-upcoming-departure {
  padding: 0;

  &:first-child {
    padding-left: $grid-gutter-width / 2;
  }

  &:last-child {
    padding-right: $grid-gutter-width / 2;
  }
}

.severe-delay {
  color: $brand-danger;
}

.station-schedules-empty {
  @include make-col();
  @include make-col-span(12);
  display: none;

  &:first-child {
    &:last-child {
      display: initial;
    }
  }
}

.stop-link {
  white-space: normal;
}

.station-map-container {
  margin-bottom: 1rem;

  .google-map {
    height: 16.5rem;
    width: 100%;

    @include media-breakpoint-only(md) {
      height: 14.375rem;
    }

    @include media-breakpoint-down(sm) {
      height: 10rem;
    }
  }
}

